[project]
name = "markdown-tools"
version = "0.1.0"
description = "For working with markdown chapters in a programming book"
authors = [{ name = "Bruce Eckel", email = "MindviewInc@gmail.com" }]
dependencies = ["typer[all]>=0.9.0", "textual>=0.44.1", "readchar>=4.0.5"]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
mt = "tools:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["mypy>=1.7.0", "pytest>=7.4.3"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 70
